package edu.upc.dsa.models;

public enum Objects {
    POCION,
    ARMA,
    ARMADURA,
    ESPADA,
    ESCUDO,
    BASICA,
    HIELO,
    AOE,
    SNIPER
}

