@startuml

left to right direction

class User {
  -username: String
  -password: String
  -email: String
  -ActFrag: Integer
  -BestScore: Integer
  -vidaInicial: Integer
  -monedas: Integer
  -myobjects: List<GameObject>
  +CheckObject(newobj: GameObject): boolean
}

class UserGameObject {
  -gameObject: GameObject
  -cantidad: Integer
}

class GameObject {
  -id: String
  -nombre: String
  -descripcion: String
  -tipo: Objects
  -precio: int
}

enum Objects {
  POCION
  ARMA
  ARMADURA
  ESPADA
  ESCUDO
  BASICA
  HIELO
  AOE
  SNIPER
}

User "1" *-- "0..*" UserGameObject : owns
UserGameObject "0..*" -- "1" GameObject : references
GameObject "0..*" --> "1" Objects : has type

note right of UserGameObject
  Inventory entry.
  It connects a user inventory
  with one GameObject and stores
  the quantity owned.
end note

note right of Objects
  Type of GameObject.
  Tower-related values:
  BASICA, HIELO, AOE, SNIPER.

  Other values are generic/legacy
  inventory types kept because
  they exist in the code.
end note

@enduml
